Fix z-index of the sidebar selected-item triangle

--- a/web/app/style/leftnavi.less
+++ b/web/app/style/leftnavi.less
@@ -33,6 +33,7 @@
       position: absolute;
       bottom: 4px;
       right: -32px;
+      z-index: (@z-index-base + 1);
     }
   }
 }
